--- a/web-runner/src/main/webapp/style/jbehave/jbehave.css
+++ b/web-runner/src/main/webapp/style/jbehave/jbehave.css
@@ -9,6 +9,7 @@ body {
 	position: relative;
 	width: 860px;
 	margin: 0 auto;
+	padding-bottom: 1px;
 	text-align: left;
 }
 
@@ -101,7 +102,12 @@ body {
 }
 
 #footer {
+	background-color: #ebebeb;
+	border: 2px solid #ccc;
 	clear: both;
+	margin: 0px 12px 10px 12px;
+	padding: 5px 10px 5px 10px;
+	text-align: right;
 }
 
 #actions {
@@ -209,4 +215,21 @@ table td {
 	padding-left: 5px;
 	padding-right: 5px;
 	text-align: center;
+}
+
+.upload .wicket-mfu-container {
+	padding: 5px;
+	margin: 10px 0px 10px 0px;
+	background-color: white;
+	border: 2px solid gray;
+	font-size: xx-small;
+}
+
+.upload .wicket-mfu-caption {
+	font-weight: bold;
+}
+
+.upload .wicket-mfu-container input {
+	margin-left: 5px;
+	font-size: xx-small;
 }
