JBEHAVE-335:  Added WITH_METHODS view to Find Steps page.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/stepdocs.vm
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/stepdocs.vm
@@ -1,3 +1,6 @@
 #foreach( $stepdoc in $stepdocs )
 ${stepdoc.startingWord} ${stepdoc.pattern}
+#if ( "$view" == 'WITH_METHODS' )
+[${stepdoc.methodSignature}]
+#end
 #end
